Blender crashes when dragging objects from appended scene #60432

Closed
opened 2019-01-12 00:39:05 +01:00 by Ryan · 6 comments

Blender crashes when attempting to add objects from an appended scene when dragging from scene in outline to viewport.

System Info:
OS: Windows 10 Education
Graphics Card: NVIDIA GeForce GTX 1070

Blender Version
Blender 2.8 Hash: 80ffa73b3f

Steps to reproduce:

  1. Reset to Factory Settings
    image.png
  2. Load test1.blend
    image.png
  3. Select Append... Then select test2.blend, then Scene, then select Scene
    image.png
    image.png
  4. Select Scene View in Outliner
    image.png
  5. Expand Hierarchy to show objects in Scene.001
    image.png
  6. With test1 scene as Active Scene, drag Sphere object into 3D Viewport.
    image.png

Result: Blender crashes.

test1.blend
test2.blend

Blender crashes when attempting to add objects from an appended scene when dragging from scene in outline to viewport. **System Info:** OS: Windows 10 Education Graphics Card: NVIDIA GeForce GTX 1070 **Blender Version** Blender 2.8 Hash: 80ffa73b3f87 **Steps to reproduce:** 1. Reset to Factory Settings ![image.png](https://archive.blender.org/developer/F6259579/image.png) 2. Load test1.blend ![image.png](https://archive.blender.org/developer/F6259586/image.png) 3. Select Append... Then select test2.blend, then Scene, then select Scene ![image.png](https://archive.blender.org/developer/F6259594/image.png) ![image.png](https://archive.blender.org/developer/F6259603/image.png) 4. Select Scene View in Outliner ![image.png](https://archive.blender.org/developer/F6259622/image.png) 5. Expand Hierarchy to show objects in Scene.001 ![image.png](https://archive.blender.org/developer/F6259634/image.png) 6. With test1 scene as Active Scene, drag Sphere object into 3D Viewport. ![image.png](https://archive.blender.org/developer/F6259648/image.png) Result: Blender crashes. [test1.blend](https://archive.blender.org/developer/F6259556/test1.blend) [test2.blend](https://archive.blender.org/developer/F6259557/test2.blend)
Author

Added subscriber: @mrlee

Added subscriber: @mrlee

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-01-28 11:37:19 +01:00

When appending the scene I get the following assert in the debug build:
BLI_assert failed: blender/source/blender/blenlib/intern/BLI_ghash.c:466, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)'

Without that assert, I can reproduce the crash. Here is the bt:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555575f0a9a in object_add_duplicate_internal (bmain=0x7fff9f752408, scene=0x7fffd16de008, view_layer=0x7fffe9d23ac8, ob=0x7fff9f7e9008, dupflag=1599)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2243
2243			basen->local_view_bits = base->local_view_bits;
(gdb) bt
#0  0x00005555575f0a9a in object_add_duplicate_internal (bmain=0x7fff9f752408, scene=0x7fffd16de008, view_layer=0x7fffe9d23ac8, ob=0x7fff9f7e9008,
    dupflag=1599) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2243
#1  0x00005555575f20d5 in add_named_exec (C=0x7ffff0030288, op=0x7fff9e03b048)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2592
#2  0x00005555570ec4df in wm_operator_invoke (C=0x7ffff0030288, ot=0x7fffead0ab08, event=0x7fff9dcb0108, properties=0x7fffde6c6f08, reports=0x0,
    poll_only=false, use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1343
#3  0x00005555570ecce2 in wm_operator_call_internal (C=0x7ffff0030288, ot=0x7fffead0ab08, properties=0x7fffde6c6f08, reports=0x0, context=0, poll_only=false,
    event=0x7fff9dcb0108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1576
#4  0x00005555570ef07f in wm_handlers_do_intern (C=0x7ffff0030288, event=0x7fff9dcb0108, handlers=0x7fff9e0615d8)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2416
#5  0x00005555570ef860 in wm_handlers_do (C=0x7ffff0030288, event=0x7fff9dcb0108, handlers=0x7fff9e0615d8)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2618
#6  0x00005555570f0f96 in wm_event_do_handlers (C=0x7ffff0030288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3093
- 7  0x00005555570e5885 in WM_main (C=0x7ffff0030288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:425
- 8  0x00005555570e016e in main (argc=1, argv=0x7fffffffdd08) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:520
When appending the scene I get the following assert in the debug build: `BLI_assert failed: blender/source/blender/blenlib/intern/BLI_ghash.c:466, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)'` Without that assert, I can reproduce the crash. Here is the bt: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555575f0a9a in object_add_duplicate_internal (bmain=0x7fff9f752408, scene=0x7fffd16de008, view_layer=0x7fffe9d23ac8, ob=0x7fff9f7e9008, dupflag=1599) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2243 2243 basen->local_view_bits = base->local_view_bits; (gdb) bt #0 0x00005555575f0a9a in object_add_duplicate_internal (bmain=0x7fff9f752408, scene=0x7fffd16de008, view_layer=0x7fffe9d23ac8, ob=0x7fff9f7e9008, dupflag=1599) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2243 #1 0x00005555575f20d5 in add_named_exec (C=0x7ffff0030288, op=0x7fff9e03b048) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_add.c:2592 #2 0x00005555570ec4df in wm_operator_invoke (C=0x7ffff0030288, ot=0x7fffead0ab08, event=0x7fff9dcb0108, properties=0x7fffde6c6f08, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1343 #3 0x00005555570ecce2 in wm_operator_call_internal (C=0x7ffff0030288, ot=0x7fffead0ab08, properties=0x7fffde6c6f08, reports=0x0, context=0, poll_only=false, event=0x7fff9dcb0108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1576 #4 0x00005555570ef07f in wm_handlers_do_intern (C=0x7ffff0030288, event=0x7fff9dcb0108, handlers=0x7fff9e0615d8) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2416 #5 0x00005555570ef860 in wm_handlers_do (C=0x7ffff0030288, event=0x7fff9dcb0108, handlers=0x7fff9e0615d8) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2618 #6 0x00005555570f0f96 in wm_event_do_handlers (C=0x7ffff0030288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3093 - 7 0x00005555570e5885 in WM_main (C=0x7ffff0030288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:425 - 8 0x00005555570e016e in main (argc=1, argv=0x7fffffffdd08) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:520 ```

Note that this has nothing to do with appending, from default blender start, add a new empty scene, and try to drag-and-drop cube from default scene in there from outliner also crashes. Dummy mistake actually.

Note that this has nothing to do with appending, from default blender start, add a new empty scene, and try to drag-and-drop cube from default scene in there from outliner also crashes. Dummy mistake actually.

This issue was referenced by 3e072da45b

This issue was referenced by 3e072da45bee1ac5368b83c84839d2ccdde6e514

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60432
No description provided.