Fix T60432: Blender crashes when dragging objects from other scene from outliner.