source/blender/editors/object/object_add.c
@@ -2240,8 +2240,11 @@ static Base *object_add_duplicate_internal(Main *bmain, Scene *scene, ViewLayer 
 			LayerCollection *layer_collection = BKE_layer_collection_get_active(view_layer);
 			BKE_collection_object_add(bmain, layer_collection->collection, obn);
 		}
+
 		basen = BKE_view_layer_base_find(view_layer, obn);
-		basen->local_view_bits = base->local_view_bits;
+		if (base != NULL) {
+			basen->local_view_bits = base->local_view_bits;
+		}
 
 		/* 1) duplis should end up in same collection as the original
 		 * 2) Rigid Body sim participants MUST always be part of a collection...
